--- a/public/manifest/manifest.json
+++ b/public/manifest/manifest.json
@@ -1,8 +1,10 @@
 {
-    "name": "Listes",
+    "name": "Listed",
+    "short_name": "todolist",
     "theme_color": "#333333",
     "background_color": "#333333",
     "display": "standalone",
+    "start_url": "/index.php",
     "icons": [
         {
             "src": "img/liste.png",
