fix manifest title

--- a/public/manifest/manifest.json
+++ b/public/manifest/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Listed",
+    "name": "Listes",
     "short_name": "todolist",
     "theme_color": "#333333",
     "background_color": "#333333",
