--- a/public/manifest/manifest.json
+++ b/public/manifest/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Listes",
-    "short_name": "todolist",
+    "short_name": "Listes",
     "theme_color": "#333333",
     "background_color": "#333333",
     "display": "standalone",
